# voice-inpainting

./: .gitignore  CLAUDE.md  MVC_MIGRATION.md  README.md  app.py  architecture_diagram.d2  debugging.ipynb  main.py  package.json  pyproject.toml  pytest.ini  test_api.py  text_edit.py  transcription.py  tts.py
src/: aligned_sequences.py  alignment.py  api_mvc.py  app.py  audio_processing.py  fusion.py  generation.py  generator.py  integrated_inpainting.py  main.py  memory_manager.py  mimi_tokenizer.py  models.py  semantic_edit.py  session_manager.py  text_edit.py  text_to_speech.py  token_store.py  tokenization.py  transcription.py  watermarking.py
static/: index-mvc.html  index.html  mvc-demo.html
static/css/: animations.css  components.css  improved-styles.css  main.css  manual-editing.css  mvc-additions.css  themes.css
static/js/: app.js  audio-processor.js  audio-recorder.js  button-initializer.js  dropdown-handler.js  mvc-controller.js  theme-controller.js  token-text-editor.js  ui-controller.js  visualizer.js  waveform-editor.js
tests/: README.md  conftest.py  test_api_mvc.py  test_audio_processor.js  test_core.py  test_frontend.html  test_integration.js  test_modules.js  test_mvc_controller.js  test_token_editor.js  test_token_store.py  test_tokenization.py  test_ui_controller.js  test_waveform_editor.js
