[project]
name = "voice-inpainting"
version = "0.1.0"
description = ""
authors = [{ name = "Philipp Seitz", email = "phlippseitz@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "numpy>=2.1.0",
    "matplotlib>=3.9.3,<4",
    "watchdog>=6.0.0,<7",
    "ffmpeg-python>=0.2.0,<0.3",
    "llama-cpp-python>=0.3.2,<0.4",
    "huggingface-hub>=0.26.3,<0.27",
    "regex>=2024.11.6,<2025",
    "safetensors>=0.4.5,<0.5",
    "loguru>=0.7.2,<0.8",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "librosa>=0.11.0",
    "pyrubberband>=0.4.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "ctranslate2>=4.4.0",
    "ipykernel>=6.29.5",
    "moshi>=0.2.2",
    "soundfile>=0.13.1",
    "torchao>=0.9.0",
    "torchtune>=0.5.0",
    "silentcipher",
    "python-multipart>=0.0.20",
    "dotenv>=0.9.9",
    "moshi-mlx>=0.2.3; sys_platform == 'darwin'",
    "transformers",
    "accelerate>=1.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
silentcipher = { git = "https://github.com/SesameAILabs/silentcipher", rev = "master" }
transformers = { git = "https://github.com/nyrahealth/transformers.git", rev = "crisper_whisper" }

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
